# youtube_channel_summarization

./: .gitignore  README.md  TODO.md  api.py  app.py  pyproject.toml  requirements.txt
src/youtube_rag/: __init__.py  config.py  ingest.py  main.py  preprocess_transcripts.py  transcribe.py
src/youtube_rag/core/: __init__.py  config.py  database.py  http_utils.py  models.py  utils.py
src/youtube_rag/pipeline/: __init__.py  ingest.py  knowledge.py  preprocess.py  summarize.py  transcribe.py
src/youtube_rag/rag/: __init__.py  chunking.py  indexer.py  llm_client.py  search_engine.py
tests/: test_main.py  test_rag_models_and_chunking.py  test_transcriber.py  test_vector_db.py  test_youtube_ingest.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/ask/: route.ts
web/app/api/events/: route.ts
web/app/api/outline/[videoId]/: route.ts
web/app/search/: page.tsx
web/app/video/[videoId]/outline/: page.tsx
web/components/: OutlineCard.tsx
web/lib/: content.ts  events.ts  types.ts  youtube.ts
